--- a/src/assets/styles/sections/cart.scss
+++ b/src/assets/styles/sections/cart.scss
@@ -74,7 +74,8 @@
   position: absolute;
   top: 10px;
   right: 20px;
-  width: 15px;
+  width: 20px;
+  font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -84,6 +85,7 @@
   cursor: pointer;
   @media (min-width: 768px) {
     left: 20px;
+    font-size: 15px;
   }
 
   &:hover {
